Revision history for Perl distribution Mojo-SAML

0.02 2018-05-09
  - Fix several documentation problems
  - Add insert_xml_declaration to Document class

0.01 2018-05-08
  - Initial release
