@@ -48,6 +48,10 @@ Their name is both the name of the subclass and the tag that they create.
 
 Constant shortcut to L<Mojo::SAML::Document::AssertionConsumerService>.
 
+=head3 AttributeConsumingService
+
+Constant shortcut to L<Mojo::SAML::Document::AttributeConsumingService>.
+
 =head3 AuthnRequest
 
 Constant shortcut to L<Mojo::SAML::Document::AuthnRequest>.
@@ -75,6 +79,10 @@ Constant shortcut to L<Mojo::SAML::Document::NameIDPolicy>.
 =head3 Organization
 
 Constant shortcut to L<Mojo::SAML::Document::Organization>.
+
+=head3 RequestedAttribute
+
+Constant shortcut to L<Mojo::SAML::Document::RequestedAttribute>.
 
 =head3 Signature
 
